[tool.poetry]
name = "locust-stress-test"
version = "0.1.0"
description = "Stress test examples using the lib locust"
authors = ["Thiago Ferreira <th.thiago96@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
locust = "^2.4.1"
lorem = "^0.1.1"

[tool.poetry.dev-dependencies]
black = "^21.9b0"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
